--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,5 +1,5 @@
 node_modules file is needed.
 download/place into bot folder
 
---- This tutorial can help you out with setting up or coding your own discord bot ---
+--- This tutorial can help you out with setting up this bot or coding your own discord bot ---
 https://www.youtube.com/watch?v=qVyqqtwkb8c
